--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
-"dependencies": {
-  "axios": "^1.6.0",
-  "telegraf": "^4.12.2"
+{
+  "name": "mediafire-dl-bot",
+  "version": "1.0.0",
+  "main": "api/webhook.js",
+  "type": "module",
+  "scripts": {
+    "start": "node api/webhook.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "telegraf": "^4.12.2"
+  }
 }
